now signups are handled on server

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Ankiboards Api
+  p Click #[a(href='http://ankiboards.com') here] for the site.
